force-app/main/default/objects/Certificate__c/Certificate__c.object-meta.xml
<CustomObject>
    <description>Certificate issued to Client</description>
    <label>Certificate</label>
    <nameField>
        <displayFormat>CRT-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>