force-app/main/default/objects/Certificate__c/fields/Certificate_FSC_ID__c.field-meta.xml
<CustomField>
    <fullName>Certificate_FSC_ID__c</fullName>
    <description>FSC</description>
    <label>Certificate FSC ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>