force-app/main/default/objects/Certificate__c/fields/Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Type__c</fullName>
    <description>FSC</description>
    <label>Certificate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Certificate</fullName>
            </value>
            <value>
                <fullName>Multi Certificate</fullName>
            </value>
            <value>
                <fullName>Group Certificate</fullName>
            </value>
            <value>
                <fullName>Project Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>