force-app/main/default/objects/Certificate__c/fields/Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>Certification_Type__c</fullName>
    <label>Certification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Re-certification</fullName>
            </value>
            <value>
                <fullName>Unannounced</fullName>
            </value>
            <value>
                <fullName>Surveillance audit</fullName>
            </value>
            <value>
                <fullName>Pre-assessment</fullName>
            </value>
            <value>
                <fullName>Scope Expansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>