force-app/main/default/objects/Certificate__c/fields/Claim_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Claim_Secondary__c</fullName>
    <label>Claim Secondary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>