force-app/main/default/objects/Certificate__c/fields/Client_Products__c.field-meta.xml
<CustomField>
    <fullName>Client_Products__c</fullName>
    <label>Client Products</label>
    <type>TextArea</type>
</CustomField>