force-app/main/default/objects/Certificate__c/fields/Common_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Common_Certificate_Number__c</fullName>
    <description>this field use to sync the certificate number.</description>
    <formula>IF(ISPICKVAL(Refer_SCS_Scheme_Number__c,&apos;SCS Certification Number&apos;), SCS_Certification_Number__c ,Scheme_Certification_Number__c)</formula>
    <label>Common Certificate Number</label>
    <type>Text</type>
</CustomField>