force-app/main/default/objects/Certificate__c/fields/Date_of_Decision__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Decision__c</fullName>
    <label>Date of Decision</label>
    <type>Date</type>
</CustomField>