force-app/main/default/objects/Certificate__c/fields/Date_of_Next_Recertification_Audit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Next_Recertification_Audit__c</fullName>
    <label>Date of Next Recertification Audit</label>
    <type>Date</type>
</CustomField>