force-app/main/default/objects/Certificate__c/fields/DateClientNotifiedCertSuspension__c.field-meta.xml
<CustomField>
    <fullName>DateClientNotifiedCertSuspension__c</fullName>
    <label>Date Client Notified (Cert. Suspension)</label>
    <type>Date</type>
</CustomField>