force-app/main/default/objects/Certificate__c/fields/DateClientNotifiedCertTermination__c.field-meta.xml
<CustomField>
    <fullName>DateClientNotifiedCertTermination__c</fullName>
    <label>Date Client Notified (Cert. Termination)</label>
    <type>Date</type>
</CustomField>