force-app/main/default/objects/Certificate__c/fields/DateSchemeNotifiedCertSuspension__c.field-meta.xml
<CustomField>
    <fullName>DateSchemeNotifiedCertSuspension__c</fullName>
    <label>Date Scheme Notified (Cert. Suspension)</label>
    <type>Date</type>
</CustomField>