force-app/main/default/objects/Certificate__c/fields/DateSchemeNotifiedCertTermination__c.field-meta.xml
<CustomField>
    <fullName>DateSchemeNotifiedCertTermination__c</fullName>
    <label>Date Scheme Notified (Cert. Termination)</label>
    <type>Date</type>
</CustomField>