force-app/main/default/objects/Certificate__c/fields/DMS_additional_sites__c.field-meta.xml
<CustomField>
    <fullName>DMS_additional_sites__c</fullName>
    <label>DMS additional sites</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>