force-app/main/default/objects/Certificate__c/fields/DMS_Certificate_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_Certificate_ID__c</fullName>
    <externalId>true</externalId>
    <label>DMS Certificate ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>