force-app/main/default/objects/Certificate__c/fields/DMS_Certificate_Link__c.field-meta.xml
<CustomField>
    <fullName>DMS_Certificate_Link__c</fullName>
    <formula>IF(ISBLANK(DMS_Certificate_ID__c),&quot;&quot;,

hyperlink(&quot;https://www.scscertified.com/minnow/dms_redirect/?file=certificates_scs&amp;script=find_by_id&amp;param=&quot; &amp; DMS_Certificate_ID__c, &quot;View in DMS&quot;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click to navigate to the full Certificate record in DMS.</inlineHelpText>
    <label>DMS Certificate Link</label>
    <type>Text</type>
</CustomField>