force-app/main/default/objects/Certificate__c/fields/DMS_Certificate_Link_FM__c.field-meta.xml
<CustomField>
    <fullName>DMS_Certificate_Link_FM__c</fullName>
    <formula>&quot;fmp://*/certificates_scs.fmp12?script=find_by_id&amp;param=&quot; &amp; DMS_Certificate_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Copy and paste into browser address bar to navigate to DMS Certificate record</inlineHelpText>
    <label>DMS Certificate Link (FM)</label>
    <type>Text</type>
</CustomField>