force-app/main/default/objects/Certificate__c/fields/DMS_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_Client_ID__c</fullName>
    <label>DMS Client ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>