force-app/main/default/objects/Certificate__c/fields/DMS_Prog_Num__c.field-meta.xml
<CustomField>
    <fullName>DMS_Prog_Num__c</fullName>
    <label>DMS Prog Num</label>
    <length>20</length>
    <type>Text</type>
</CustomField>