force-app/main/default/objects/Certificate__c/fields/Extension_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Requested_Date__c</fullName>
    <label>Extension Requested Date</label>
    <type>Date</type>
</CustomField>