force-app/main/default/objects/Certificate__c/fields/External_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Account_Id__c</fullName>
    <formula>Account__r.External_Record_Id__c</formula>
    <label>External Account Id</label>
    <type>Text</type>
</CustomField>