force-app/main/default/objects/Certificate__c/fields/External_Parent_Certificate_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Parent_Certificate_Id__c</fullName>
    <formula>Parent_Certificate__r.External_Record_Id__c</formula>
    <label>External Parent Certificate Id</label>
    <type>Text</type>
</CustomField>