force-app/main/default/objects/Certificate__c/fields/External_Program_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Program_Id__c</fullName>
    <formula>Program__r.External_Record_Id__c</formula>
    <label>External Program Id</label>
    <type>Text</type>
</CustomField>