force-app/main/default/objects/Certificate__c/fields/FSC__c.field-meta.xml
<CustomField>
    <fullName>FSC__c</fullName>
    <label>FSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>