force-app/main/default/objects/Certificate__c/fields/FSC_License_Code__c.field-meta.xml
<CustomField>
    <fullName>FSC_License_Code__c</fullName>
    <description>FSC</description>
    <label>FSC License Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>