force-app/main/default/objects/Certificate__c/fields/FSCID__c.field-meta.xml
<CustomField>
    <fullName>FSCID__c</fullName>
    <label>FSC ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>