force-app/main/default/objects/Certificate__c/fields/New_CB_Transfer_Out__c.field-meta.xml
<CustomField>
    <fullName>New_CB_Transfer_Out__c</fullName>
    <label>New CB (Transfer Out)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>