force-app/main/default/objects/Certificate__c/fields/Parent_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Parent_Certificate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Certificate</label>
    <referenceTo>Certificate__c</referenceTo>
    <relationshipLabel>Certificates</relationshipLabel>
    <relationshipName>Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>