force-app/main/default/objects/Certificate__c/fields/PDFLink__c.field-meta.xml
<CustomField>
    <fullName>PDFLink__c</fullName>
    <label>PDF Link</label>
    <type>Url</type>
</CustomField>