force-app/main/default/objects/Certificate__c/fields/Previous_CB_Transfer_In__c.field-meta.xml
<CustomField>
    <fullName>Previous_CB_Transfer_In__c</fullName>
    <label>Previous CB (Transfer In)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>