force-app/main/default/objects/Certificate__c/fields/Product_Covered__c.field-meta.xml
<CustomField>
    <fullName>Product_Covered__c</fullName>
    <label>Product Covered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>