force-app/main/default/objects/Certificate__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>