force-app/main/default/objects/Certificate__c/fields/Reason_for_Suspension__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Suspension__c</fullName>
    <label>Reason for Suspension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>