force-app/main/default/objects/Certificate__c/fields/Reason_of_Termination__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_Termination__c</fullName>
    <description>FSC termination Reason</description>
    <label>Reason of Termination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative - Transfer to another CB</fullName>
            </value>
            <value>
                <fullName>Administrative - Business closure</fullName>
            </value>
            <value>
                <fullName>Administrative - Data/Administrative error</fullName>
            </value>
            <value>
                <fullName>Administrative - Moved to group certificate</fullName>
            </value>
            <value>
                <fullName>Administrative - Operations combined to another certificate</fullName>
            </value>
            <value>
                <fullName>Administrative - Applicant never certified</fullName>
            </value>
            <value>
                <fullName>Forced - Non-conformance with CAR</fullName>
            </value>
            <value>
                <fullName>Forced - Non-payment of fees</fullName>
            </value>
            <value>
                <fullName>Forced - Non-conformance with contractual commitments</fullName>
            </value>
            <value>
                <fullName>Forced - False Claims</fullName>
            </value>
            <value>
                <fullName>Forced – FSC-ADV-20-001-12</fullName>
            </value>
            <value>
                <fullName>Voluntary - Certification not required</fullName>
            </value>
            <value>
                <fullName>Voluntary - Expired at end of term</fullName>
            </value>
            <value>
                <fullName>Voluntary - Lack of demand</fullName>
            </value>
            <value>
                <fullName>Voluntary - Lack of supply</fullName>
            </value>
            <value>
                <fullName>Voluntary – Cost of Certification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>