force-app/main/default/objects/Certificate__c/fields/Refer_SCS_Scheme_Number__c.field-meta.xml
<CustomField>
    <fullName>Refer_SCS_Scheme_Number__c</fullName>
    <label>Print SCS/Scheme Number?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheme Certification Number</fullName>
            </value>
            <value>
                <fullName>SCS Certification Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>