force-app/main/default/objects/Certificate__c/fields/Reinstatement_Date__c.field-meta.xml
<CustomField>
    <fullName>Reinstatement_Date__c</fullName>
    <label>Reinstatement Date</label>
    <type>Date</type>
</CustomField>