force-app/main/default/objects/Certificate__c/fields/Reson_for_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Reson_for_Transfer__c</fullName>
    <label>Reason for Transfer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>