force-app/main/default/objects/Certificate__c/fields/Scheme_Certification_Number__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Certification_Number__c</fullName>
    <label>Scheme Certification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>