force-app/main/default/objects/Certificate__c/fields/SCS_Certification_Number__c.field-meta.xml
<CustomField>
    <fullName>SCS_Certification_Number__c</fullName>
    <label>SCS Certification Number</label>
    <type>TextArea</type>
</CustomField>