force-app/main/default/objects/Certificate__c/fields/Status_for_Transfer_In__c.field-meta.xml
<CustomField>
    <fullName>Status_for_Transfer_In__c</fullName>
    <label>Status for Transfer In</label>
    <length>20</length>
    <type>Text</type>
</CustomField>