force-app/main/default/objects/Certificate__c/fields/Status_for_Transfer_Out__c.field-meta.xml
<CustomField>
    <fullName>Status_for_Transfer_Out__c</fullName>
    <label>Status for Transfer Out</label>
    <length>20</length>
    <type>Text</type>
</CustomField>