force-app/main/default/objects/Certificate__c/fields/Suspension_date__c.field-meta.xml
<CustomField>
    <fullName>Suspension_date__c</fullName>
    <label>Suspension date</label>
    <type>Date</type>
</CustomField>