force-app/main/default/objects/Certificate__c/fields/Technical_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Technical_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FSC</description>
    <label>Technical Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Certificates1</relationshipName>
    <type>Lookup</type>
</CustomField>