force-app/main/default/objects/Certificate__c/fields/Transfer_Date_Palm_Trace__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Date_Palm_Trace__c</fullName>
    <label>Transfer Date ( Palm Trace)</label>
    <type>Date</type>
</CustomField>