force-app/main/default/objects/Certificate__c/fields/Transfer_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Out_Date__c</fullName>
    <label>Transfer Out Date</label>
    <type>Date</type>
</CustomField>