force-app/main/default/objects/Certificate__c/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>