force-app/main/default/objects/Certificate__c/fields/ValidThrough__c.field-meta.xml
<CustomField>
    <fullName>ValidThrough__c</fullName>
    <label>Valid Through</label>
    <type>Date</type>
</CustomField>