force-app/main/default/objects/Certificate__c/validationRules/Date_of_Audit_Today_or_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Audit_Today_or_Past</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Audit__c   &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Audit__c</errorDisplayField>
    <errorMessage>Date of Audit should be either Today or a Past date. It can not be a future date</errorMessage>
</ValidationRule>