force-app/main/default/objects/Certificate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>SCS_Certification_Number__c</columns>
    <columns>Status__c</columns>
    <columns>ValidFrom__c</columns>
    <columns>ValidThrough__c</columns>
    <columns>Program__c</columns>
    <columns>Start_date_of_first_certificate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>